[package]
name = "collections"
version = "0.1.0"
authors = ["merl <merl.001.mia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7"

[dependencies]
bincode = "1.0"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
