[package]
name = "civs"
version = "0.1.1"
authors = ["merl <merl.001.mia@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Controllably Increasing/Inflating VectorS"

repository = "https://github.com/merl-twin/civs"
homepage = "https://github.com/merl-twin/civs"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
debug = []

[dev-dependencies]
rand = "0.7"

[dependencies]
bincode = "1.0"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
